<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mountain">

    <ImageView
        android:id="@+id/imgMountain"
        android:layout_width="190dp"
        android:layout_height="239dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/mountainLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mountain_comforts" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="293dp"
        android:layout_height="80dp"
        android:layout_marginTop="275dp"
        android:gravity="center_horizontal"
        android:text="@string/mountainTitle"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="193dp"
        android:layout_height="53dp"
        android:layout_marginTop="362dp"
        android:text="@string/mountainAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>